new file:   .gitignore 	modified:   index.html 	modified:   node_modules/flowbite/README.md 	modified:   node_modules/flowbite/dist/datepicker.js 	modified:   node_modules/flowbite/dist/datepicker.js.map 	modified:   node_modules/flowbite/dist/flowbite.css 	modified:   node_modules/flowbite/dist/flowbite.js 	modified:   node_modules/flowbite/dist/flowbite.js.map 	modified:   node_modules/flowbite/dist/flowbite.min.css 	modified:   node_modules/flowbite/package.json 	modified:   node_modules/flowbite/src/components/modal.js 	modified:   node_modules/flowbite/src/flowbite.js 	modified:   node_modules/flowbite/webpack.config.js 	new file:   package-lock.json 	new file:   package.json 	new file:   postcss.config.js 	renamed:    src/input.css -> src/css/tailwind/input.css 	renamed:    dist/output.css -> src/css/tailwind/main.css 	modified:   tailwind.config.js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </script>
     <title>NameCounter</title>
     <!-- CSS -->
-    <link href="dist/output.css" rel="stylesheet">
+    <link href="src/css/tailwind/main.css" rel="stylesheet">
     <link rel="stylesheet" href="src/css/style.css">
     <!-- AOS Library -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
